2009-10-19  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V01-04-01
	* do not attach shared memory in constructor (for use with MPEP)
	
2009-07-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-04-00
	* implement DaqBaseReader::setRunNumber introduced in
	IORawData/DaqSource V01-06-17.

2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-03-00
	* add Kurt's changes
	* write the process id to the error event record in shared memory

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-02-00
	* if we are still attached to shm when the destructor hits, send
	the last processed event to the error stream and deregister this
	process from the buffer.

2007-11-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-01-01
	* detach from shared memory segment in destructor if it isn't
	null: this ensures that configure -> halt -> configure works
	properly 
	
2007-05-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-01-00
	* note that V01-00-00 was tagged by whomever for the plugins
	framework change
	* this version is in line with EventFilter/FUShmBuffer V00-04-00
	and EventFilter/ResourceBroker V00-07-00

2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* make FUShmReader 'pset-less': no (dummy) pset needs to be
	provided for the configuration of the DaqSource anymore

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* based on EventFilter/ShmBuffer V00-03-00

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* depend on EventFilter/ShmBuffer instead of
	EventFilter/ResourceBroker
	* adjust to API typo fix of FUShmBuffer: shm_dettach -> shm_detach
	* (yet another) fix to shutdown procedure.

2007-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-01
	* fix to shutdown procedure.
