@@ -1,3 +1,8 @@
+2010-01-11  Emilio Meschi <Emilio.Meschi@cern.ch>
+
+	* tag V01-05-00
+	* End-of-lumisection event signal to EP
+	
 2009-10-19  Emilio Meschi <Emilio.Meschi@cern.ch>
 
 	* tag V01-04-01
